<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="edu.temple.gymminder.geofence.GeofenceFragment">

    <TextView
        android:id="@+id/addGeofenceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/add_geofence"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/latitudeEditText"
        android:hint="@string/latitude"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/finishGeofenceButton"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="@+id/finishGeofenceButton"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/longitudeEditText"
        android:hint="@string/longitude"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/latitudeEditText"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/finishGeofenceButton"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="@+id/finishGeofenceButton"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.5"
        android:layout_marginStart="8dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radiusEditText"
        android:hint="@string/gps_radius"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/longitudeEditText"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/finishGeofenceButton"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="@+id/finishGeofenceButton"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.5"
        android:layout_marginStart="8dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/getLocationButton"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_gps_fixed"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/radiusEditText"
        android:layout_marginLeft="8dp"
        app:layout_constraintRight_toLeftOf="@+id/finishGeofenceButton"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/finishGeofenceButton"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="@+id/finishGeofenceButton"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/finishGeofenceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/finish"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/addGeofenceLabel" />

</android.support.constraint.ConstraintLayout>
